src/snapshots/transmute__parser__tests__ret-dot.snap
---
source: src/parser.rs
expression: "Dot::new(&ast, &vec![]).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="42"][shape="plaintext"][fontcolor="black"]
n1[label="ret"][shape="plaintext"][fontcolor="black"]
n1 -> n0[style="solid"][color="black"][arrowhead="none"]}
