src/snapshots/transmute__parser__tests__struct_inside_function.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"let f() = { struct MyStruct {} }\")).parse()"
---
(
    Ast {
        identifiers: [
            "f",
            "MyStruct",
        ],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Block(
                    [
                        StmtId {
                            id: 0,
                        },
                    ],
                ),
                span: 1:11; [10, 32],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 1,
                        },
                        span: 1:20; [19, 27],
                    },
                    [],
                ),
                span: 1:13; [12, 30],
            },
            Statement {
                id: StmtId {
                    id: 1,
                },
                kind: LetFn(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:5; [4, 5],
                    },
                    [],
                    None,
                    ExprId {
                        id: 0,
                    },
                ),
                span: 1:1; [0, 32],
            },
        ],
        root: [
            StmtId {
                id: 1,
            },
        ],
    },
    Diagnostics {
        diagnostics: [],
    },
)
