src/snapshots/transmute__parser__tests__struct_instantiation_empty.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { };\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "S",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:1; [0, 1],
                    bound: Unbound,
                },
            },
        ],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: StructInstantiation(
                    IdentRefId(0),
                    [],
                ),
                span: 1:1; [0, 5],
                typed: Untyped,
            },
        ],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(0),
                ),
                span: 1:1; [0, 6],
            },
        ],
        root: [
            StmtId(0),
        ],
        symbols: [],
        types: [],
        state: Raw,
    },
)
