src/snapshots/transmute__parser__tests__struct_instantiation_one_field.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { x: 1 };\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "S",
            "x",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:5; [4, 5],
                },
            },
            IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:1; [0, 1],
                },
            },
        ],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 1:8; [7, 8],
                    },
                ),
                span: 1:8; [7, 8],
            },
            Expression {
                id: ExprId(1),
                kind: StructInstantiation(
                    IdentRefId(1),
                    [
                        (
                            IdentRefId(0),
                            ExprId(0),
                        ),
                    ],
                ),
                span: 1:1; [0, 10],
            },
        ],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(1),
                ),
                span: 1:1; [0, 11],
            },
        ],
        root: [
            StmtId(0),
        ],
    },
)
