src/snapshots/transmute__parser__tests__struct_instantiation_two_fields.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { x: 1, y: 2 };\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "S",
            "x",
            "y",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId {
                    id: 0,
                },
                ident: Identifier {
                    id: IdentId {
                        id: 1,
                    },
                    span: 1:5; [4, 5],
                },
                bound_state: Unbound,
            },
            IdentifierRef {
                id: IdentRefId {
                    id: 1,
                },
                ident: Identifier {
                    id: IdentId {
                        id: 2,
                    },
                    span: 1:11; [10, 11],
                },
                bound_state: Unbound,
            },
            IdentifierRef {
                id: IdentRefId {
                    id: 2,
                },
                ident: Identifier {
                    id: IdentId {
                        id: 0,
                    },
                    span: 1:1; [0, 1],
                },
                bound_state: Unbound,
            },
        ],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            1,
                        ),
                        span: 1:8; [7, 8],
                    },
                ),
                span: 1:8; [7, 8],
                typed_state: Untyped,
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            2,
                        ),
                        span: 1:14; [13, 14],
                    },
                ),
                span: 1:14; [13, 14],
                typed_state: Untyped,
            },
            Expression {
                id: ExprId {
                    id: 2,
                },
                kind: StructInstantiation(
                    IdentRefId {
                        id: 2,
                    },
                    [
                        (
                            IdentRefId {
                                id: 0,
                            },
                            ExprId {
                                id: 0,
                            },
                        ),
                        (
                            IdentRefId {
                                id: 1,
                            },
                            ExprId {
                                id: 1,
                            },
                        ),
                    ],
                ),
                span: 1:1; [0, 16],
                typed_state: Untyped,
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 2,
                    },
                ),
                span: 1:1; [0, 17],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
        symbols: [],
        types: [],
        state: ImplicitRet,
    },
)
