src/snapshots/transmute__parser__tests__struct_instantiation_two_fields_trailing_coma.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"S { x: 1, y: 2, };\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "S",
            "x",
            "y",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:5; [4, 5],
                },
            },
            IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(2),
                    span: 1:11; [10, 11],
                },
            },
            IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:1; [0, 1],
                },
            },
        ],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 1:8; [7, 8],
                    },
                ),
                span: 1:8; [7, 8],
            },
            Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(2),
                        span: 1:14; [13, 14],
                    },
                ),
                span: 1:14; [13, 14],
            },
            Expression {
                id: ExprId(2),
                kind: StructInstantiation(
                    IdentRefId(2),
                    [
                        (
                            IdentRefId(0),
                            ExprId(0),
                        ),
                        (
                            IdentRefId(1),
                            ExprId(1),
                        ),
                    ],
                ),
                span: 1:1; [0, 17],
            },
        ],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(2),
                ),
                span: 1:1; [0, 18],
            },
        ],
        roots: [
            StmtId(0),
        ],
    },
)
