src/snapshots/transmute__parser__tests__struct_statement_trailing_comma.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "MyStruct",
            "a",
            "t_1",
            "b",
            "t_b",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:19; [18, 19],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:22; [21, 24],
                            },
                            span: 1:19; [18, 24],
                        },
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 3,
                                },
                                span: 1:27; [26, 27],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 4,
                                },
                                span: 1:30; [29, 32],
                            },
                            span: 1:27; [26, 32],
                        },
                    ],
                ),
                span: 1:1; [0, 34],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [],
    },
)
