src/snapshots/transmute__parser__tests__struct_valid_several_fields.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { a: number, b: number }\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "S",
            "a",
            "number",
            "b",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId {
                    id: 0,
                },
                ident: Identifier {
                    id: IdentId {
                        id: 2,
                    },
                    span: 1:15; [14, 20],
                },
                bound_state: Unbound,
            },
            IdentifierRef {
                id: IdentRefId {
                    id: 1,
                },
                ident: Identifier {
                    id: IdentId {
                        id: 2,
                    },
                    span: 1:26; [25, 31],
                },
                bound_state: Unbound,
            },
        ],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 8],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:12; [11, 12],
                            },
                            ty: IdentRefId {
                                id: 0,
                            },
                            span: 1:12; [11, 20],
                            state: Untyped,
                        },
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 3,
                                },
                                span: 1:23; [22, 23],
                            },
                            ty: IdentRefId {
                                id: 1,
                            },
                            span: 1:23; [22, 31],
                            state: Untyped,
                        },
                    ],
                ),
                span: 1:1; [0, 33],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
        symbols: [],
        types: [],
        state: ImplicitRet,
    },
)
