src/snapshots/transmute__parser__tests__struct_valid_trailing_comma.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { a: number, }\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "S",
            "a",
            "number",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 8],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:12; [11, 12],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:15; [14, 20],
                            },
                            span: 1:12; [11, 20],
                        },
                    ],
                ),
                span: 1:1; [0, 23],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
        implicit_ret: PhantomData<transmute::ast::WithImplicitRet>,
    },
)
